# 1c_nsi

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DEPLOYMENT.md  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  opencode.json  render.yaml  test_chat.py  test_chat2.py  test_db.py  test_normalization.py  test_proxy.py  test_vector.py
.github/workflows/: ci.yml  deploy-frontend.yml
backend/: .dockerignore  Dockerfile  alembic.ini  nsi_data.db  nsi_data.db-shm  nsi_data.db-wal  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
backend/alembic/: README  env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  database.py  main.py  rate_limit.py  seed.py
backend/app/api/v1/: auth.py  chat.py  hierarchy.py  maintenance.py  mass_processing.py  parser.py  reliability.py  specifications.py  tk.py  upper_levels.py
backend/app/auth/: __init__.py  dependencies.py  security.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: schemas.py
backend/app/services/: ai_service.py  analogs.py  classification.py  file_parser.py  mineru_service.py  normalization.py  parse_jobs.py
backend/tests/: conftest.py  test_auth.py  test_hierarchy_cards.py  test_normalization.py  test_rate_limit.py
deploy/fly/: fly.toml
deploy/huggingface/: Dockerfile  README.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/auth/: LoginPage.tsx  RegisterPage.tsx  RequireAuth.tsx  store.ts
frontend/src/components/hierarchy/: AnalogSearch.tsx  ClassPicker.tsx  ClassifierTree.tsx  HierarchyTree.tsx  InfoDrawer.tsx
frontend/src/components/layout/: AnimatedBackground.tsx  AppLayout.tsx  LavaLampBackground.tsx  Navbar.tsx
frontend/src/components/ui/: FileUpload.tsx  GlassCard.tsx
frontend/src/components/workspaces/: ChatWorkspace.tsx  HierarchyWorkspace.tsx  MaintenanceWorkspace.tsx  MassProcessingWorkspace.tsx  ParserWorkspace.tsx  ReliabilityWorkspace.tsx  SpecificationsWorkspace.tsx  TkWorkspace.tsx  UpperLevelsWorkspace.tsx
frontend/src/store/: index.ts
thoughts/ledgers/: CONTINUITY_ses_2644.md
thoughts/shared/designs/: 2026-04-17-nsi-functional-api-design.md
thoughts/shared/plans/: 2026-04-17-nsi-implementation.md
ДОКУМЕНТЫ ДЛЯ РАБОТЫ/: 5843ЕФ руководство по эксплуатации (1).txt  Виды воздействия на ТОР инт.xlsx  Виды воздействия на ТОР ист.xlsx  Иерархия с моделями.xlsx  Классификатор.xlsx  Классификация моделей.xlsx  Компоненты из источников на ТОР.xlsx  Нормализация моделей.xlsx  Операции на компоненты ТОР из баз данных.xlsx  Операции на компоненты ТОР из источников.xlsx  Операции на компоненты ТОР нормализация.xlsx  Паспортизация.xlsx  Результирующий файл Модели с характ. ист. по классификатору.xlsx  Результирующий файл Модели с характ. ист. полный.xlsx  Справочник ВВ и периодичностей.xlsx  Справочник операций.xlsx  Справочник специальности и квалификации.xlsx  Справочник характеристик и ед. измерения (основные).xlsx  Формирование справочника BOM T6.2.6.xlsx  Формирование справочника BOM ПРГ-160.xlsx  Характеристики и ед. измерения.xlsx
ТЗ/: Задачи и сроки иНСИ 06.04.2026.csv  СТЕК.txt  ТЗ на Инструмент НСИ 06.04.2026.txt
